--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 dirs = "2.0.2"
 fs_extra = "1.1.0"
+log = "0.4.8"
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.3.8"
